# python-orderbook

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: test.yml
src/orderbook/: order.py  orderbook.py
tests/: test_order.py  test_orderbook.py
