[metadata]

name = python-orderbook
description = Simple orderbook and matching engine in python
author = Loo Ting
license = MIT
license_file = LICENSE

[options]
packages = 
    orderbook
install_require = 
    sortedcontainers==2.4.0
    termcolor==2.4.0
python_requires = 
    >=3.11
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
orderbook = py.typed

[flake8]
max-line-length = 160